--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*breakpoints vars*/
 /*font vars*/
 /*color vars*/
 .body {
@@ -13,6 +14,7 @@
 
 .title--hidden {
   width: 0;
+  height: 0;
   font-size: 0;
   visibility: hidden;
 }
@@ -42,11 +44,29 @@
 }
 
 .main-container {
-  width: 75rem;
   padding-left: 0.937rem;
   padding-right: 0.937rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 30rem) {
+  .main-container {
+    width: 30rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .main-container {
+    width: 48rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .main-container {
+    /*width: 75rem;*/
+    width: 75rem;
+  }
 }
 
 .flex-container {
@@ -58,20 +78,43 @@
           align-items: center;
 }
 
+.flex-container--header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .section {
-  padding-top: 5.875rem;
-  padding-bottom: 5.875rem;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .section {
+    padding-top: 5.875rem;
+    padding-bottom: 5.875rem;
+  }
 }
 
 .section-title {
-  font-size: 2.25rem;
-  line-height: 1.17;
+  font-size: 1.75rem;
+  line-height: 2.06rem;
   letter-spacing: 0.03em;
   text-align: center;
 }
 
 .section-title--margins {
-  margin-bottom: 3.125rem;
+  margin-bottom: 1.875rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .section-title {
+    font-size: 2.25rem;
+    line-height: 2.625rem;
+  }
+  .section-title--margins {
+    margin-bottom: 3.125rem;
+  }
 }
 
 .button-base {
@@ -173,10 +216,17 @@
   color: black;
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 1.625rem;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
   text-decoration: none;
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 75rem) {
+  .logo {
+    font-size: 1.625rem;
+    line-height: 1.93rem;
+  }
 }
 
 .logo-accent {
@@ -189,9 +239,17 @@
 }
 
 .contacts-icon {
-  width: 1rem;
-  height: 1rem;
-  margin-right: 0.625rem;
+  width: 0.875rem;
+  height: 0.875rem;
+  margin-right: 0.5rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .contacts-icon {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.625rem;
+  }
 }
 
 .social-list {
@@ -243,33 +301,48 @@
 }
 
 .header {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  min-height: 80px;
+  min-height: 3.75rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #ececec;
 }
 
-.header__logo {
-  margin-right: 95px;
+@media screen and (min-width: 48rem) {
+  .header {
+    min-height: 5rem;
+    padding-top: 1.562rem;
+    padding-bottom: 1.562rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .header__logo {
+    margin-right: 5.937rem;
+  }
 }
 
 .navigation-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  display: none;
 }
 
-.navigation-list__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 48rem) {
+  .navigation-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #212121;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1rem;
+    letter-spacing: 0.02em;
+  }
+  .navigation-list__item:not(:last-child) {
+    margin-right: 3.125rem;
+  }
 }
 
 .navigation__link {
@@ -304,17 +377,37 @@
 }
 
 .header__contacts-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: auto;
+  display: none;
 }
 
-.header__contacts-item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 48rem) {
+  .header__contacts-list {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .header__contacts-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 48rem) {
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 0.625rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .header__contacts-item:not(:last-child) {
+    margin-right: 1.875rem;
+  }
 }
 
 .header__contacts-link {
@@ -323,8 +416,8 @@
   display: flex;
   color: #757575;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 0.875;
+  line-height: 1rem;
   letter-spacing: 0.02em;
   -webkit-transition-property: color;
   transition-property: color;
@@ -339,60 +432,124 @@
 }
 
 .hero {
-  padding-top: 12.5rem;
-  padding-bottom: 12.5rem;
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/hero-bg.jpg);
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50% 50%;
+}
+
+@media screen and (min-width: 48rem) {
+  .hero {
+    padding-top: 7.5rem;
+    padding-bottom: 7.5rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .hero {
+    padding-top: 12.5rem;
+    padding-bottom: 12.5rem;
+  }
 }
 
 .hero__title {
+  max-width: 22.5rem;
   color: #fff;
   font-weight: 900;
-  font-size: 2.75rem;
-  line-height: 1.36;
+  font-size: 1.625rem;
+  line-height: 2.625rem;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero__title--magrin {
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 1.875rem;
+  margin-bottom: 1.875rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .hero__title {
+    max-width: 43.5rem;
+    font-size: 2.75rem;
+    line-height: 3.75rem;
+  }
 }
 
 .goals {
   font-size: 0.875rem;
   /*14px*/
-  line-height: 1.71;
+  line-height: 1.5rem;
   letter-spacing: 0.03em;
   text-align: left;
 }
 
 .goals__title {
   font-size: 0.875rem;
+  line-height: 1.14rem;
   letter-spacing: 0.03em;
+  text-align: center;
   text-transform: uppercase;
   margin-bottom: 0.625rem;
 }
 
+@media screen and (min-width: 48rem) {
+  .goals__title {
+    text-align: left;
+  }
+}
+
 .goals__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  /*margin-top: -1.875rem;*/
+}
+
+@media screen and (min-width: 48rem) {
+  .goals__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: -1.875rem;
+    margin-bottom: -1.875rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .goals__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .goals__item {
-  -ms-flex-preferred-size: calc(100% / 4-1.875rem);
-      flex-basis: calc(100% / 4-1.875rem);
-  padding-right: 0.25rem;
+  display: block;
 }
 
-.goals__item:not(:last-child) {
-  margin-right: 1.875rem;
+@media screen and (min-width: 48rem) {
+  .goals__item {
+    -ms-flex-preferred-size: calc(100% / 3-1.875rem);
+        flex-basis: calc(100% / 3-1.875rem);
+    padding-right: 0.25rem;
+    margin-left: 1.875rem;
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .goals__item {
+    -ms-flex-preferred-size: calc(100% / 4-1.875rem);
+        flex-basis: calc(100% / 4-1.875rem);
+    padding-right: 0.25rem;
+  }
+  .goals__item:not(:last-child) {
+    margin-right: 1.875rem;
+  }
 }
 
 .goals__picture {
@@ -417,59 +574,76 @@
 }
 
 .about {
-  padding-bottom: 5.94rem;
+  display: none;
 }
 
-.about-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 75rem) {
+  .about {
+    display: block;
+  }
 }
 
-.about-list__item {
-  -ms-flex-preferred-size: calc(100% / 3-1.875rem);
-      flex-basis: calc(100% / 3-1.875rem);
+@media screen and (min-width: 75rem) {
+  .about-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
-.about-list__item:not(:last-child) {
-  margin-right: 1.875rem;
+@media screen and (min-width: 75rem) {
+  .about-list__item {
+    -ms-flex-preferred-size: calc(100% / 3-1.875rem);
+        flex-basis: calc(100% / 3-1.875rem);
+  }
+  .about-list__item:not(:last-child) {
+    margin-right: 1.875rem;
+  }
 }
 
-.about__link {
-  position: relative;
+@media screen and (min-width: 75rem) {
+  .about__link {
+    position: relative;
+  }
 }
 
-.about__image {
-  display: block;
-  width: 100%;
+@media screen and (min-width: 75rem) {
+  .about__image {
+    display: block;
+    width: 100%;
+  }
 }
 
-.about__title-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  bottom: 0;
-  margin: 0;
-  width: 100%;
-  min-height: 4.375rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(47, 48, 58, 0.8);
+@media screen and (min-width: 75rem) {
+  .about__title-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    min-height: 4.375rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 }
 
-.about__title {
-  display: inline-block;
-  font-size: 0.875rem;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #fff;
+@media screen and (min-width: 75rem) {
+  .about__title {
+    display: inline-block;
+    font-size: 0.875rem;
+    font-weight: 700;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #fff;
+  }
 }
 
 .team {
@@ -477,18 +651,47 @@
 }
 
 .team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin-top: -1.875rem;
 }
 
-.team-list__item {
-  -ms-flex-preferred-size: calc(100% / 4-1.875rem);
-      flex-basis: calc(100% / 4-1.875rem);
+@media screen and (min-width: 48rem) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: -1.875rem;
+  }
 }
 
-.team-list__item:not(:last-child) {
-  margin-right: 1.875rem;
+@media screen and (min-width: 75rem) {
+  .team-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.team-list .team-list__item {
+  margin-top: 1.875rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .team-list .team-list__item {
+    -ms-flex-preferred-size: calc(100% / 2-1.875rem);
+        flex-basis: calc(100% / 2-1.875rem);
+    margin-left: 1.875rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .team-list .team-list__item {
+    -ms-flex-preferred-size: calc(100% / 4-1.875rem);
+        flex-basis: calc(100% / 4-1.875rem);
+  }
+  .team-list .team-list__item:not(:last-child) {
+    margin-right: 1.875rem;
+  }
 }
 
 .member-card {
