--- a/sass/components/_goals.scss
+++ b/sass/components/_goals.scss
@@ -1,24 +1,51 @@
 .goals {
   font-size: 0.875rem; /*14px*/
-  line-height: 1.71;
+  line-height: 1.5rem;
   letter-spacing: 0.03em;
   text-align: left;
 }
 .goals__title {
   font-size: 0.875rem;
+  line-height: 1.14rem;
   letter-spacing: 0.03em;
+  text-align: center;
   text-transform: uppercase;
   margin-bottom: 0.625rem;
+
+  @media screen and (min-width: $tablet-brk-point) {
+    text-align: left;
+  }
 }
 .goals__list {
-  display: flex;
+  /*margin-top: -1.875rem;*/
+
+  @media screen and (min-width: $tablet-brk-point) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1.875rem;
+    margin-bottom: -1.875rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    flex-wrap: nowrap;
+  }
 }
 .goals__item {
-  flex-basis: calc(100% / 4-1.875rem);
-  padding-right: 0.25rem;
+  display: block;
 
-  &:not(:last-child) {
-    margin-right: 1.875rem;
+  @media screen and (min-width: $tablet-brk-point) {
+    flex-basis: calc(100% / 3-1.875rem);
+    padding-right: 0.25rem;
+
+    margin-left: 1.875rem;
+    margin-bottom: 1.875rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    flex-basis: calc(100% / 4-1.875rem);
+    padding-right: 0.25rem;
+
+    &:not(:last-child) {
+      margin-right: 1.875rem;
+    }
   }
 }
 .goals__picture {
