--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
-  padding-top: 12.5rem;
-  padding-bottom: 12.5rem;
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
 
   background-color: $accent-background-color;
   background-image: linear-gradient(
@@ -9,20 +9,40 @@
       rgba(47, 48, 58, 0.4)
     ),
     $hero-background-image;
+
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50% 50%;
+
+  @media screen and (min-width: $tablet-brk-point) {
+    padding-top: 7.5rem;
+    padding-bottom: 7.5rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    padding-top: 12.5rem;
+    padding-bottom: 12.5rem;
+  }
 }
 .hero__title {
+  max-width: 22.5rem;
+
   color: $hero-text-color;
   font-weight: 900;
-  font-size: 2.75rem;
-  line-height: 1.36;
+  font-size: 1.625rem;
+  line-height: 2.625rem;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
-.hero__title--magrin {
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 1.875rem;
+  margin-left: auto;
+  margin-right: auto;
+
+  &--magrin {
+    margin-bottom: 1.875rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    max-width: 43.5rem;
+
+    font-size: 2.75rem;
+    line-height: 3.75rem;
+  }
 }
