--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,13 +2,30 @@
   background-color: $secondary-background-color;
 }
 .team-list {
-  display: flex;
-}
-.team-list__item {
-  flex-basis: calc(100% / 4-1.875rem);
+  margin-top: -1.875rem;
 
-  &:not(:last-child) {
-    margin-right: 1.875rem;
+  @media screen and (min-width: $tablet-brk-point) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1.875rem;
+  }
+
+  @media screen and (min-width: $desktop-brk-point) {
+    flex-wrap: nowrap;
+  }
+  .team-list__item {
+    margin-top: 1.875rem;
+    @media screen and (min-width: $tablet-brk-point) {
+      flex-basis: calc(100% / 2-1.875rem);
+      margin-left: 1.875rem;
+    }
+    @media screen and (min-width: $desktop-brk-point) {
+      flex-basis: calc(100% / 4-1.875rem);
+
+      &:not(:last-child) {
+        margin-right: 1.875rem;
+      }
+    }
   }
 }
 .member-card {
