--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,35 +2,39 @@
   background-color: $secondary-background-color;
 }
 .team-list {
-  margin-top: -1.875rem;
+  outline: 1px solid red;
 
   @media screen and (min-width: $tablet-brk-point) {
     display: flex;
+    justify-content: center;
+  }
+  @media screen and (min-width: $tablet-brk-point) and (max-width: $desktop-brk-point) {
     flex-wrap: wrap;
     margin-left: -1.875rem;
+    margin-top: -1.875rem;
   }
-
   @media screen and (min-width: $desktop-brk-point) {
     flex-wrap: nowrap;
   }
-  .team-list__item {
-    margin-top: 1.875rem;
-    @media screen and (min-width: $tablet-brk-point) {
-      flex-basis: calc(100% / 2-1.875rem);
-      margin-left: 1.875rem;
-    }
-    @media screen and (min-width: $desktop-brk-point) {
-      flex-basis: calc(100% / 4-1.875rem);
+}
+.team-list__item {
+  display: block;
 
-      &:not(:last-child) {
-        margin-right: 1.875rem;
-      }
+  @media screen and (min-width: $tablet-brk-point) and (max-width: $desktop-brk-point) {
+    flex-basis: calc(100% / 2-1.875rem);
+    margin-left: 1.875rem;
+    margin-top: 1.875rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    flex-basis: calc(100% / 4-1.875rem);
+
+    &:not(:last-child) {
+      margin-right: 1.875rem;
     }
   }
 }
 .member-card {
-  width: 100%;
-  min-height: 23rem;
+  /*width: 100%;*/
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
 
@@ -41,12 +45,16 @@
   box-shadow: 0rem 0.125rem 0.062rem rgba(0, 0, 0, 0.2),
     0rem 0.062rem 0.062rem rgba(0, 0, 0, 0.14),
     0rem 0.062rem 0.187rem rgba(0, 0, 0, 0.12);
+
+  outline: 1px solid red;
 }
 .member-card__photo {
-  display: block;
+  /*display: block;*/
   width: 100%;
-  max-height: 16.25rem;
+  /*max-height: 16.25rem;*/
   margin: 0;
+
+  outline: 1px solid red;
 }
 .member-info {
   padding-top: 1.875rem;
