--- a/sass/components/_goals.scss
+++ b/sass/components/_goals.scss
@@ -17,35 +17,37 @@
   }
 }
 .goals__list {
-  /*margin-top: -1.875rem;*/
-  outline: 1px solid red;
   @media screen and (min-width: $tablet-brk-point) {
     display: flex;
     flex-wrap: wrap;
     margin-left: -1.875rem;
     margin-bottom: -1.875rem;
+    justify-content: center;
   }
   @media screen and (min-width: $desktop-brk-point) {
     flex-wrap: nowrap;
+    margin-left: 0;
+    margin-bottom: 0;
   }
 }
 .goals__item {
   display: block;
 
   @media screen and (min-width: $tablet-brk-point) {
-    flex-basis: calc(100% / 3-1.875rem);
-    padding-right: 0.25rem;
-
+    /*flex-basis: calc(100% / 2 - 1.875rem);*/
+    flex-basis: calc((100% - 60px) / 2);
     margin-left: 1.875rem;
     margin-bottom: 1.875rem;
   }
   @media screen and (min-width: $desktop-brk-point) {
-    flex-basis: calc(100% / 4-1.875rem);
-    padding-right: 0.25rem;
+    /* flex-basis: calc(100% / 4 - 1.875rem);*/
+    flex-basis: calc((100% - 120px) / 4);
 
     &:not(:last-child) {
       margin-right: 1.875rem;
     }
+    margin-left: 0;
+    margin-bottom: 0;
   }
 }
 .goals__picture {
