--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -15,7 +15,8 @@
     /*width: 75rem;*/
     width: $desktop-brk-point;
   }
-  outline: 1px solid green;
+
+  /*outline: 1px solid green;*/
 }
 .flex-container {
   display: flex;
@@ -33,7 +34,8 @@
     padding-top: 5.875rem;
     padding-bottom: 5.875rem;
   }
-  outline: 1px solid red;
+
+  /* outline: 1px solid red;*/
 }
 .section-title {
   font-size: 1.75rem;
