--- a/sass/components/_socialList.scss
+++ b/sass/components/_socialList.scss
@@ -30,6 +30,10 @@
 .social-list__link--footer {
   background-color: $icon-footer-background-color;
   color: $primary-white;
+  margin-bottom: 3.75rem;
+  @media screen and (min-width: $desktop-brk-point) {
+    margin-bottom: 0;
+  }
 }
 .social-icon {
   width: 2.75rem;
