--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,7 @@
   }
 }
 
-@media screen and (max-width: 48rem) {
+@media screen and (min-width: 48rem) {
   .header__contacts-item:not(:last-child) {
     margin-bottom: 0.625rem;
   }
@@ -415,6 +415,7 @@
 
 @media screen and (min-width: 75rem) {
   .header__contacts-item:not(:last-child) {
+    margin-bottom: 0;
     margin-right: 1.875rem;
   }
 }
@@ -425,8 +426,8 @@
   display: flex;
   color: #757575;
   font-weight: 500;
-  font-size: 0.875;
-  line-height: 1rem;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
   letter-spacing: 0.02em;
   -webkit-transition-property: color;
   transition-property: color;
@@ -434,6 +435,13 @@
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 75rem) {
+  .header__contacts-link {
+    font-size: 0.875rem;
+    line-height: 1rem;
+  }
 }
 
 .header__contacts-link:hover, .header__contacts-link:focus {
@@ -1013,20 +1021,51 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-left: auto;
-  padding-right: auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+@media screen and (min-width: 48rem) {
+  .filter-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    /*padding-left: auto;
+    padding-right: auto;*/
+  }
 }
 
 .filter-list--margin {
-  margin-bottom: 3.125rem;
+  margin-bottom: 2.5rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .filter-list--margin {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .filter-list--margin {
+    margin-bottom: 3.125rem;
+  }
 }
 
 .filter-list__item {
   -ms-flex-preferred-size: calc(100% / 5-0.5rem);
       flex-basis: calc(100% / 5-0.5rem);
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .filter-list__item {
+    margin-bottom: 0;
+  }
 }
 
 .filter-list__item:not(:last-child) {
@@ -1034,30 +1073,38 @@
 }
 
 .portfolio-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  /* display: flex;
+  flex-wrap: wrap;
+
+  justify-content: center;*/
 }
 
-.portfolio-list--margin {
-  margin-left: -1.875rem;
-  margin-top: -1.875rem;
+@media screen and (min-width: 48rem) {
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .portfolio-list--margin {
+    margin-left: -1.875rem;
+    margin-top: -1.875rem;
+  }
 }
 
 .portfolio-list__item {
   display: block;
-  -ms-flex-preferred-size: calc(100% / 3-1.875rem);
-      flex-basis: calc(100% / 3-1.875rem);
-  width: 23.125rem;
+  width: 100%;
+  margin-bottom: 1.875rem;
   border: 0.062rem solid #eeeeee;
   background-color: #fff;
-  margin-top: 1.875rem;
-  margin-left: 1.875rem;
   text-align: left;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
@@ -1067,6 +1114,25 @@
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* width: 23.125rem;*/
+}
+
+@media screen and (min-width: 48rem) {
+  .portfolio-list__item {
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+    margin-top: 1.875rem;
+    margin-left: 1.875rem;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .portfolio-list__item {
+    /*flex-basis: calc(100% / 3- 30px);*/
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
+  }
 }
 
 .portfolio-list__item:hover, .portfolio-list__item:focus {
@@ -1076,6 +1142,11 @@
 
 .portfolio-list__link {
   display: block;
+}
+
+.product__photo {
+  display: block;
+  width: 100%;
 }
 
 .product__description {
