--- a/sass/components/_prtflFilter.scss
+++ b/sass/components/_prtflFilter.scss
@@ -1,15 +1,33 @@
 .filter-list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: left;
 
-  padding-left: auto;
-  padding-right: auto;
+  @media screen and (min-width: $tablet-brk-point) {
+    flex-wrap: nowrap;
+    justify-content: center;
+
+    /*padding-left: auto;
+    padding-right: auto;*/
+  }
 }
 .filter-list--margin {
-  margin-bottom: 3.125rem;
+  margin-bottom: 2.5rem;
+
+  @media screen and (min-width: $tablet-brk-point) {
+    margin-bottom: 1.875rem;
+  }
+  @media screen and (min-width: $desktop-brk-point) {
+    margin-bottom: 3.125rem;
+  }
 }
 .filter-list__item {
   flex-basis: calc(100% / 5-0.5rem);
+  margin-bottom: 1rem;
+
+  @media screen and (min-width: $tablet-brk-point) {
+    margin-bottom: 0;
+  }
 
   &:not(:last-child) {
     margin-right: 0.5rem;
