--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -40,6 +40,8 @@ $footer-text-color: rgba(255, 255, 255, 0.6);
 
 $icon-primary-color: #afb1b8;
 $icon-contacts-color: #757575;
+$icon-mobile-menu-color: #212121;
+$icon-mobile-menu-hover-color: #2196f3;
 $icon-footer-background-color: rgba(255, 255, 255, 0.1);
 $icon-goals-background-color: #f5f4fa;
 $icon-form-color: #212121;
