--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -15,6 +15,31 @@
   &:hover {
     background-color: $primary-white;
   }
+  /*for mobile menu*/
+  /*&--menu {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+
+    background-color: $modal-menu-background-color;
+
+    transition-property: none;
+
+    .main-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+  }
+  &--menu.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }*/
 }
 .modal__close {
   position: absolute;
@@ -39,7 +64,21 @@
   &:hover > .modal__close-icon,
   &:focus > .modal__close-icon {
     fill: $modal-close-hover-color;
-  }
+  } /*
+  &--menu {
+    width: 2.5rem;
+    height: 2.5rem;
+
+    top: -2.5rem;
+    right: 0.937rem;
+
+    border: none;
+
+    .modal__close-icon {
+      width: 1.15rem;
+      height: 1.15rem;
+    }
+  }*/
 }
 .modal__close-icon {
   width: 0.687rem;
