--- a/sass/components/modal/_backdrop.scss
+++ b/sass/components/modal/_backdrop.scss
@@ -6,6 +6,10 @@
   height: 100%;
 
   background-color: $backdrop-background-color;
+
+  /* &--mobile-menu {
+    background-color: $primary-white;
+  }*/
 }
 .back-drop.is-hidden {
   opacity: 0;
