--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,4 @@
 @import "./components/modal/backdrop";
 @import "./components/modal/modal";
 @import "./components/modal/form";
+@import "./components/modal/mobMenu";
