--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -57,6 +57,11 @@ $modal-background-color: rgba(24, 140, 232, 0.3);
 $modal-close-border-color: rgba(0, 0, 0, 0.1);
 $modal-close-icon-color: black;
 $modal-close-hover-color: #2196f3;
+$modal-menu-background-color: #fff;
+$modal-menu-text-color: #212121;
+$modal-menu-accent-color: #2196f3;
+$modal-menu-mail-color: #757575;
+$modal-menu-social-color: #2196f3;
 
 $modal-form-input-border: rgba(33, 33, 33, 0.2);
 $modal-form-input-hover-border: #2196f3;
