--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -53,7 +53,7 @@ $prtfl-item-border-color: #eeeeee;
 $prtfl-overlay-color: rgba(33, 150, 243, 0.9);
 
 $backdrop-background-color: rgba(0, 0, 0, 0.2);
-$modal-background-color: rgba(24, 140, 232, 0.3);
+$modal-background-color: #fff;
 $modal-close-border-color: rgba(0, 0, 0, 0.1);
 $modal-close-icon-color: black;
 $modal-close-hover-color: #2196f3;
